AP-25531: Cleanup project setup